--- a/index.html
+++ b/index.html
@@ -12,8 +12,8 @@
 <body>
     <nav id="main_nav">
         <ul>
+            <li><a href=#>About</a></li>
             <li><a href=#>Home</a></li>
-            <li>About</li>
         </ul>
     </nav>
     <div class="myClear"></div>
