Adds styling to navbar

--- a/index.html
+++ b/index.html
@@ -10,12 +10,15 @@
 
 </head>
 <body>
-    <nav id="main_nav">
-        <ul>
-            <li><a href=#>About</a></li>
-            <li><a href=#>Home</a></li>
+    <div id="nav-div">
+    <nav class="navbar navbar-expand-lg bg-light" id="main_nav">
+        <ul class="navbar-nav">
+            <li class="nav-item active"><a class="nav-link" href=#>Home</a></li>
+            <li class="nav-item"><a class="nav-link" href=#>About</a></li>
+            
         </ul>
     </nav>
+    </div>
     <div class="myClear"></div>
     <header>
         <h1 class="container">Welcome to my website!</h1>
