--- a/index.html
+++ b/index.html
@@ -12,7 +12,7 @@
 </head>
 <body>
     <div id="nav-div">
-    <nav class="navbar navbar-expand-lg bg-dark bg-gradient" id="main_nav">
+    <nav class="navbar navbar-expand-lg navbar-dark bg-dark bg-gradient" id="main_nav">
         <div class="container-fluid">
             <button class="navbar-toggler ms-auto" type="button" data-bs-toggle="collapse" data-bs-target="#navbarSupportedContent" aria-controls="navbarSupportedContent" aria-expanded="false" aria-label="Toggle navigation">
                 <span class="navbar-toggler-icon"></span>
