--- a/index.html
+++ b/index.html
@@ -14,6 +14,7 @@
     <div id="nav-div">
     <nav class="navbar navbar-expand-lg navbar-dark bg-dark bg-gradient" id="main_nav">
         <div class="container-fluid">
+            <a class="navbar-brand" id="navbarBrandName" href="#">&lt && y &gt</a>
             <button class="navbar-toggler ms-auto" type="button" data-bs-toggle="collapse" data-bs-target="#navbarSupportedContent" aria-controls="navbarSupportedContent" aria-expanded="false" aria-label="Toggle navigation">
                 <span class="navbar-toggler-icon"></span>
             </button>
