Replaces headerLanding to divLanding

--- a/index.html
+++ b/index.html
@@ -32,13 +32,14 @@
     <button class="btn btn-danger btn-floating btn-lg" id="btn-backToTop">^</button>
     <div data-bs-spy="scroll" data-bs-target="#nav-div" data-bs-smooth-scroll="true" class="navscroll bg-black bg-gradient" tabindex="0">
         <div class="container" id="homePage">
-            <header id="headerLanding">
-                <div class="square-box d-flex align-items-center">
+            <header class="divLanding">
+                <div class="square-box d-flex align-items-center row">
                     <h4>Salutations!</h4>
+                    <h1>My name is Andy Tang</h1>
                 </div>
         </header>
         </div>
-        <div id="aboutMe">
+        <div id="aboutMe" class="divLanding">
             <h2>About me</h2>
             <p>"Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua. Ut enim ad minim veniam, quis nostrud exercitation ullamco laboris nisi ut aliquip ex ea commodo consequat. Duis aute irure dolor in reprehenderit in voluptate velit esse cillum dolore eu fugiat nulla pariatur. Excepteur sint occaecat cupidatat non proident, sunt in culpa qui officia deserunt mollit anim id est laborum."</p>
             <p>"Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua. Ut enim ad minim veniam, quis nostrud exercitation ullamco laboris nisi ut aliquip ex ea commodo consequat. Duis aute irure dolor in reprehenderit in voluptate velit esse cillum dolore eu fugiat nulla pariatur. Excepteur sint occaecat cupidatat non proident, sunt in culpa qui officia deserunt mollit anim id est laborum."</p>
@@ -51,7 +52,7 @@
             <p>"Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua. Ut enim ad minim veniam, quis nostrud exercitation ullamco laboris nisi ut aliquip ex ea commodo consequat. Duis aute irure dolor in reprehenderit in voluptate velit esse cillum dolore eu fugiat nulla pariatur. Excepteur sint occaecat cupidatat non proident, sunt in culpa qui officia deserunt mollit anim id est laborum."</p>
             <p>"Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua. Ut enim ad minim veniam, quis nostrud exercitation ullamco laboris nisi ut aliquip ex ea commodo consequat. Duis aute irure dolor in reprehenderit in voluptate velit esse cillum dolore eu fugiat nulla pariatur. Excepteur sint occaecat cupidatat non proident, sunt in culpa qui officia deserunt mollit anim id est laborum."</p>
         </div>
-        <div id="projectsCarousel">
+        <div id="projectsCarousel" class="divLanding">
             <h2>Projects</h2>
         </div>
     </div>
