Adds animation to header div content

--- a/index.html
+++ b/index.html
@@ -33,11 +33,15 @@
     <div data-bs-spy="scroll" data-bs-target="#nav-div" data-bs-smooth-scroll="true" class="navscroll bg-black bg-gradient" tabindex="0">
         <div class="container" id="homePage">
             <header class="divLanding">
-                <div class="square-box d-flex align-items-center row">
-                    <h4>Salutations!</h4>
-                    <h1>My name is Andy Tang</h1>
+                <div class="square-box d-flex align-items-center row mx-5">
+                    <div>
+                        <h4 class="headerTransition" style="animation-delay: 0">Salutations!</h4>
+                        <h1 class="headerTransition" style="animation-delay: 50ms">My name is Andy Tang</h1>
+                        <h3 class="headerTransition" style="animation-delay: 100ms">I'm an aspiring Junior Software Engineer</h3>
+                        <h5 class="headerTransition" style="animation-delay: 120ms">I'm looking to expand my knowledge for both Front-end and Back-end development.</h5>
+                    </div>
                 </div>
-        </header>
+            </header>
         </div>
         <div id="aboutMe" class="divLanding">
             <h2>About me</h2>
