Adds carousel and styling

--- a/index.html
+++ b/index.html
@@ -65,7 +65,34 @@
         </div>
     </div>
         <div id="projectsCarousel" class="container divLanding">
-            <h2 class="pt-5">Projects</h2>
+            <h2 class="pt-3">Projects</h2>
+            <div class="container">
+                <div class="row">
+                    <div class="col-lg-12 col-md-10 pt-5">
+                        <div id="myProjects" class="carousel slide" data-bs-ride="carousel">
+                            <div class="carousel-indicators">
+                                <button type="button" data-bs-target="#myProjects" data-bs-slide-to="0" class="active" aria-current="true" aria-label="Slide 1"></button>
+                                <button type="button" data-bs-target="#myProjects" data-bs-slide-to="1" class="active" aria-label="Slide 2"></button>
+                                <button type="button" data-bs-target="#myProjects" data-bs-slide-to="2" class="active" aria-label="Slide 3"></button>
+                            </div>
+                            <div class="carousel-inner">
+                                <div class="carousel-item active">
+                                    <img src="images/csharpclass-groupproject.PNG" class="d-block w-100 darkenImage" alt="C# PC Part Picker group project">
+                                    <div class="carousel-caption d-none d-md-block carouselColor">
+                                        <h4>PC Part Picker app</h4> 
+                                        <p>This was made in C# using the .NET framework.</p>
+                                    </div>
+
+                                </div>
+                            </div>
+                        </div>
+                    </div>
+
+                </div>
+
+
+
+            </div>
         </div>
     </div>
     
