--- a/index.html
+++ b/index.html
@@ -68,7 +68,7 @@
             <h2 class="pt-3">Projects</h2>
             <div class="container">
                 <div class="row">
-                    <div class="col-lg-12 col-md-10 pt-5">
+                    <div class="col-lg-12 col-md-10 offset-md-1 offset-lg-0 offset-sm-0 pt-5">
                         <div id="myProjects" class="carousel slide" data-bs-ride="carousel">
                             <div class="carousel-indicators">
                                 <button type="button" data-bs-target="#myProjects" data-bs-slide-to="0" class="active" aria-current="true" aria-label="Slide 1"></button>
