Adds link to PCPartPicker group project repository

--- a/index.html
+++ b/index.html
@@ -78,10 +78,12 @@
                             <div class="carousel-inner">
                                 <div class="carousel-item active">
                                     <img src="images/csharpclass-groupproject.PNG" class="d-block w-100 darkenImage" alt="C# PC Part Picker group project">
-                                    <div class="carousel-caption d-none d-md-block carouselColor">
-                                        <h4>PC Part Picker app</h4> 
-                                        <p>This was made in C# using the .NET framework.</p>
-                                    </div>
+                                    <a href="https://github.com/andyt5/PC-partpicker" target="_blank">
+                                        <div class="carousel-caption d-none d-md-block carouselColor">
+                                            <h4>PC Part Picker app</h4>
+                                            <p>Click here to visit repository.</p>
+                                        </div>
+                                     </a>
 
                                 </div>
                             </div>
