--- a/index.html
+++ b/index.html
@@ -83,9 +83,28 @@
                                             <h4>PC Part Picker app</h4>
                                             <p>Click here to visit repository.</p>
                                         </div>
-                                     </a>
-
+                                    </a>
                                 </div>
+                                <div class="carousel-item">
+                                    <img src="images/javaclassResized-project.PNG" class="d-block w-100 darkenImage" alt="Java RPSLS project">
+                                    <a href="https://github.com/andyt5/RPSLS" target="_blank">
+                                        <div class="carousel-caption d-none d-md-block carouselColor">
+                                            <h4>Rock, Paper, Scissors, Lizard, Spock (RPSLS) project</h4>
+                                            <p>Click here to visit repository.</p>
+                                        </div>
+                                    </a>
+                                </div>
+                                <div class="carousel-item">
+                                    <img src="images/pythonclassResized-project.PNG" class="d-block w-100 darkenImage" alt="Python Final Grade Calculator project">
+                                    <a href="https://github.com/andyt5/Final-Grade-Calculator" target="_blank">
+                                        <div class="carousel-caption d-none d-md-block carouselColor">
+                                            <h4>Final Grade Calculator project</h4>
+                                            <p>Click here to visit repository.</p>
+                                        </div>
+                                    </a>
+                                </div>
+
+
                             </div>
                         </div>
                     </div>
