Adds more projects to carousel and includes intervals

--- a/index.html
+++ b/index.html
@@ -74,9 +74,10 @@
                                 <button type="button" data-bs-target="#myProjects" data-bs-slide-to="0" class="active" aria-current="true" aria-label="Slide 1"></button>
                                 <button type="button" data-bs-target="#myProjects" data-bs-slide-to="1" class="active" aria-label="Slide 2"></button>
                                 <button type="button" data-bs-target="#myProjects" data-bs-slide-to="2" class="active" aria-label="Slide 3"></button>
+                                <button type="button" data-bs-target="#myProjects" data-bs-slide-to="3" class="active" aria-label="Slide 4"></button>
                             </div>
                             <div class="carousel-inner">
-                                <div class="carousel-item active">
+                                <div class="carousel-item active" data-bs-interval="6000">
                                     <img src="images/csharpclass-groupproject.PNG" class="d-block w-100 darkenImage" alt="C# PC Part Picker group project">
                                     <a href="https://github.com/andyt5/PC-partpicker" target="_blank">
                                         <div class="carousel-caption d-none d-md-block carouselColor">
@@ -85,7 +86,7 @@
                                         </div>
                                     </a>
                                 </div>
-                                <div class="carousel-item">
+                                <div class="carousel-item" data-bs-interval="6000">
                                     <img src="images/javaclassResized-project.PNG" class="d-block w-100 darkenImage" alt="Java RPSLS project">
                                     <a href="https://github.com/andyt5/RPSLS" target="_blank">
                                         <div class="carousel-caption d-none d-md-block carouselColor">
@@ -94,7 +95,7 @@
                                         </div>
                                     </a>
                                 </div>
-                                <div class="carousel-item">
+                                <div class="carousel-item" data-bs-interval="6000">
                                     <img src="images/pythonclassResized-project.PNG" class="d-block w-100 darkenImage" alt="Python Final Grade Calculator project">
                                     <a href="https://github.com/andyt5/Final-Grade-Calculator" target="_blank">
                                         <div class="carousel-caption d-none d-md-block carouselColor">
@@ -103,7 +104,15 @@
                                         </div>
                                     </a>
                                 </div>
-
+                                <div class="carousel-item" data-bs-interval="6000">
+                                    <img src="images/portfolioResized-project.PNG" class="d-block h-100 w-100 darkenImage" alt="My portfolio website">
+                                    <a href="https://github.com/andyt5/andyt5.github.io" target="_blank">
+                                        <div class="carousel-caption d-none d-md-block carouselColor">
+                                            <h4>My portfolio website</h4>
+                                            <p>Click here to visit repository.</p>
+                                        </div>
+                                    </a>
+                                </div>
 
                             </div>
                         </div>
