--- a/index.html
+++ b/index.html
@@ -65,7 +65,7 @@
         </div>
     </div>
         <div id="projectsCarousel" class="container divLanding">
-            <h2 class="pt-3">Projects</h2>
+            <h1 class="pt-3 text-center text-decoration-underline" id="projectsHeader">Projects</h1>
             <div class="container">
                 <div class="row">
                     <div class="col-lg-12 col-md-10 offset-md-1 offset-lg-0 offset-sm-0 pt-5">
@@ -113,8 +113,15 @@
                                         </div>
                                     </a>
                                 </div>
-
                             </div>
+                            <button class="carousel-control-prev" type="button" data-bs-target="#myProjects" data-bs-slide="prev">
+                                <span class="carousel-control-prev-icon bg-danger carouselRoundButtons" aria-hidden="true"></span>
+                                <span class="visually-hidden">Previous</span>
+                            </button>
+                            <button class="carousel-control-next" type="button" data-bs-target="#myProjects" data-bs-slide="next">
+                                <span class="carousel-control-next-icon bg-danger carouselRoundButtons" aria-hidden="true"></span>
+                                <span class="visually-hidden">Next</span>
+                            </button>
                         </div>
                     </div>
 
